--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lottiefiles/dotlottie-react": "^0.12.1",
     "flowbite-react": "^0.10.2",
     "primereact": "^10.7.0",
     "react": "^18.3.1",
